@@ -1,12 +1,9 @@
 AUX init.sh 382 SHA256 fa0d82cbbe21b8e01195423a7cbd5e450504734df3a1cee7f1b58996682479b1 SHA512 b1bfc5c638b8827fecddf29ea07fb2252ce27ba3cd25a33e060a8c9104b1c61d1c786010f7647b3c2f941a7cc86e22c7e1456925cf011d1fd080299a3fc03e13 WHIRLPOOL 1bfb5712991f5a77d18f279e135e08de54a1545ee8749d47e9f7d1f2954c79efc313efeacd4273fdee91e42cd2c7fd2fe8de36e578cc7e092e32d5e6a94ed07f
 AUX nexus-wrapper-2.11.2.patch 1193 SHA256 f77229f2dddaae7205eec13188487ff73a663bbcd5d45b01201706044c1f18e0 SHA512 6f7230eeebe94e2cee426ffb3f1939c0a5e3b637002de7aef36608c4e95e399db1c9e28883f6e6a67cdff08804baa69efaae310871c3a9442508c72af556da6f WHIRLPOOL 2c3b48a30f4202177deb75d437a3aedc4ecf86870d4ab8e2ea79b5cb909a34630677f1fa006328554ea08807a88c1959fbf7e86ea49981dd1847687183d4ed70
 AUX nexus-wrapper-2.11.4.patch 1193 SHA256 031a5caf1355ab11ec474a77ca2b972b441a61caabeca14ad409ab53f2743549 SHA512 c6f3f978a0b96bd696bb5e1a12f67eb81063e98e2552169597f3c944e0e6ea42c734f398712959936538ac5f9d5f5eb6c7f1fc3e43a489325e5f3a69a7543bd7 WHIRLPOOL eff81fa1037b105096e10a940d51b5288d559a2a66fa852987c2f3aa072957c7e81d60d173de26c6f9302efbe52c667c2bdcbd7e745fb590ceb208945dbde875
-DIST nexus-2.11.2-06-bundle.tar.gz 70793247 SHA256 e3fe7811d932ef449fafc4287a27fae62127154297d073f594ca5cba4721f59e SHA512 31b33afad7f31d33af78f9430c04c20ea6a9f4c7391c014493ecd0d02837f9eef99443012682ac0f463ae113b11fb2736078a36f25c1e69f510abc2c5c3a7f7d WHIRLPOOL c4ad2eb6bf1c78ae60de923e741e99bc85c61a68799f8329194648cc6669d0c6a411d0440620069637b480f7cd79ebbbba507a9ef846c678e218c81a084a37f1
 DIST nexus-2.11.4-01-bundle.tar.gz 70938260 SHA256 2901d00c7a5c287d0ab51980b0ea8ad6a3db936e6a9bc7aea573ec4e2b516719 SHA512 6d44422cb87d9b229b21ed564a9275cc3cda38ecf32de1002909750b421787c196702a811eb9f6e15726662ea13614c9d2715a8f944c8a67d5e9162b1e4eae93 WHIRLPOOL a73c37b4126f72b6b83ff9d043da46b01bb41342c7bf28a53503dd44a4c22a2da6e8af33aeb7e7229ed5b01c873576b955d5a7b9c536ed79a050ce49b0c1aa3d
 DIST nexus-3.0.0-03-unix.tar.gz 79751162 SHA256 0666769effc200a520825cce22d59a5a296d03795f72f57d0a97fbe61836d0ca SHA512 e4f728097f0b7e1232538cca2077a20cbd3ed487d86d6360cfb947a9439c9eab82fb286acb1d167f909bb158ef5914d0752e9c26f02bcce60864b7a6cec0ebe7 WHIRLPOOL 2cddeb27ed44ffd844a2c724f2db33206a331eb7dd9ad3e3de42a23afc703bed0eb8c5b76e3363f7c71c4f5897ae49a07a9801aaf424ec44baeff5c2a1c1450c
-EBUILD nexus-oss-bin-2.11.2.ebuild 1077 SHA256 a6764695b07366aaebb582698277df84897a958a5476222549da496e3997287b SHA512 5a312b18e201bd46cb26dd7de974b01c58d11cc15665d4c9e5192f915dbf41fcf7ebad5985198d9061825d1ea929c701586260493f708eeb996c2f255387dbdb WHIRLPOOL abd2162cd46c2e0ca09cdb048a5297eaa1600cdf77945405154e00fa517c26a70c89c7e67225c89b5c77bade9ed6ce5974fec9e2cff1eae3e1e058ee3cb9898c
-EBUILD nexus-oss-bin-2.11.4.ebuild 1077 SHA256 960db2f4b017aeee080298e6bebc6bc599cfe5fa3fae1f4295392f422ad0fc70 SHA512 880a7762fdad21284c82b876cd862b61200b56ac8e0678c69dc7e2517166a5e29f8f2b280990f2c1e6600d8b08975643e9d363c7a4742067847e1e894957fcf4 WHIRLPOOL 35016da52fae3d885981475f592b444bda726c0e353ed2e506aa7deeb057a233d3eaabd8c1b78f54757dbfb4ed2c95060d664dc66e39d11978809c62d4fbf446
-EBUILD nexus-oss-bin-3.0.0-r1.ebuild 1064 SHA256 5e7efa5433c4ea05ee853236627401d860319db4bcfe173206c1aacf251a2480 SHA512 7901995f687f4e85d619694b9e46f4f8f823b8c0a0761541ab5d48dcecaee0aafceb2e420d918948b0dbf400a79934c18d4600940219edad27c27cc16a9b60ec WHIRLPOOL 1018b54df4bc340f80eaa0906953ee266aaf84830bc69363a196dd7cf1ee0ed802761ae33c3adcbd2f3516520e590921d0985b5d521b8425d6ca9b6b3357fa79
-EBUILD nexus-oss-bin-3.0.0.ebuild 918 SHA256 821a3da74ed4429b90058d1bf3f0a8071ad5fd3b2fcc7507fd0404b7e54a600f SHA512 ba2c052e08b4a7f22283ed527125e35c55af5d9811b3eac7af9090120951ebe9cf6b1c6d631c2b9c6eab6815cf2b893f67bb119b14a803fa2b3ba74cab148cba WHIRLPOOL 82320b9d5579aa6cb45f7077166227ce1496fe8d8d93ec410594fa96eba652275fcd5fa2a4cd5d07db9bcda5f7e9a5601535c674ad0fbd6ad6f94614bc2a2c7f
-MISC ChangeLog 82 SHA256 12ed3543adc88564630b15553233b47b2bf04f4acc8f97eeb5c5befa2c16c75b SHA512 bf31a0cd9c7f4c2b560ef6cd2174e927933d1004c8fab2089e1d0d8c8d76f26f449f9babd33b72176038868259296cd4dda9db0b9cb175274e98fff888290703 WHIRLPOOL f7606de1e805cc293c25b9538e2fd7433ed4cd076bf7e047d7583e4e3886de1a365fe6b1e75bbcbd80f8d4da4a74ec3259d9914462a80ac75e9537dca5c9e52f
+EBUILD nexus-oss-bin-2.11.4.ebuild 1077 SHA256 3a9ceb3bfd43e8d139772dfe4853df87dbe4f320ebd1054b74bf5e11ef08acd0 SHA512 0eeacbaac03324405600b535d7f8423df1cb97caf6e93208ef92100f96a5a3f64a643100afdf594b8393571ea38ca2701c7d8dca2aaf39a26659f31fbfb64aa5 WHIRLPOOL b77abf24921315c3352b34cb68f7c2bea85bfe19a58f96fafd6fb5cf1f1d849785d3cd22d71b43c0b6437135be8aeaa505f63b87805e3ffaf7bd4baf31217ba0
+EBUILD nexus-oss-bin-3.0.0-r1.ebuild 1064 SHA256 f758b9ed498e9cba66a9c1333747e2fd4c7023db7255a9e8c6354abc5b5b371b SHA512 df3db681ff7f674f0a8c12ee30276a45bb2ed916da61a4e239856f699d12ff877b15202285d75635e73c5e54940c02b46ef0e9e1b3673a0baa34d8a5789c7144 WHIRLPOOL 7ee43d30c66388dbd4f85fdad45a06e49a6979547c63dd0b6d7c6a63714b2563b23ca7432cd5d57c5c060f3ae970a4e4583012ecf17d5821fdca9f795956ec17
+MISC ChangeLog 327 SHA256 5736ef849559541410ff71744aa83d7c842fc2839cbb2712fce7b118ef42ca4b SHA512 986d2be534bbad96cce9e2a69456a1c227c23f92972ebdfbd539abeb7572cd086d9134073ea5b7abf9a2bb7bb996d6e3ade54c59a9b80c5710abf1087a693a32 WHIRLPOOL e9401bf48e474b1b283b0637a0bf33e4ab4a41d2a183192f150a3195eb68c8f28acb70f3ea2324321e9ef3619c13d68183c590baf3db01c07dda34e5b9674c4d
 MISC metadata.xml 234 SHA256 f35b97f99a26d73cc441e1d93bfe25aaa4e9f7f6d90c8d05a74f7b7bc5b68472 SHA512 59d8156b3ca3e99c40d5a2a32de7edf2eb53279b2424998862589d6bad77617d23fc852afec0a92f8ac5bb54a88ebc504cc0641029c1936412e90ab03dfdd447 WHIRLPOOL 935a1401910a42f888c991e443a49275ea8b87976c5aa977f670053d97d18754231749749bc92d37d4b5f45ecf65914480942a11b5827b6c08fb24313a428431
