@@ -1,3 +1,7 @@
+  01 Sep 2016; Manuel Friedli <manuel@fritteli.ch> -nexus-oss-bin-2.11.2.ebuild,
+  -nexus-oss-bin-3.0.0.ebuild, nexus-oss-bin-2.11.4.ebuild,
+  nexus-oss-bin-3.0.0-r1.ebuild:
+  dev-java/nexus-oss-bin:  updated to EAPI="6" and deleted old ebuilds
+
   07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
   Added ChangeLog
-
